CD/namespace.yaml
# Create the cvjp Namespace (if not exist)

kind: Namespace
apiVersion: v1
metadata:
 name: cvjp
 labels:
   name: cvjp
   # Let ArgoCD manage this namespace from the jenkins namespace
   argocd.argoproj.io/managed-by: jenkins
